# Garry

./: .clang-format  .gitignore  CMakeLists.txt  Inquisitor-Prompt-wh40k.md  LICENSE  README.md
docs/: DELPHI_FPC_COMPAT_PLAN.md  DELPHI_OOP_ANALYSIS.md  GODOT_ANALYSIS.md  KNOWN_ISSUES.md  KNOWN_ISSUES_EFFORT.md  SWIFT_KOTLIN_EFFORT.md
include/garry/: api.h  config.h  cursor.h  database.h  encoding.h  export.h  garry_string.h  iterator.h  keysplit.h  navigation.h  operations.h  transaction.h  types.h
platform_src/: platform_file_io.h  platform_threading.h
platform_src/posix/: file_io.c  threading.c  threading_impl.h
platform_src/win32/: file_io.c  threading.c  threading_impl.h
src/: btree_compression.c  btree_compression.h  btree_cursor.c  btree_cursor.h  btree_modify.c  btree_modify.h  btree_node.c  btree_node.h  btree_search.c  btree_search.h  buffer_pool.c  buffer_pool.h  db_header.c  db_header.h  engine_settings.c  engine_settings.h  file_io.h  garry_api.c  garry_config.c  garry_internal.h  garry_threading.h  garry_types.c  gc.c  gc.h  hierarchical.c  hierarchical.h  key_encoding.c  key_encoding.h  keysplit.c  lock_table.c  lock_table.h  lz4.c  lz4.h  record_codec.c  record_codec.h  slotted_page.c  slotted_page.h  storage_core.c  storage_core.h  storage_cursor.c  (+23 more)
tests/: CMakeLists.txt  test_api.c  test_blog_storage.c  test_btree_cursor.c  test_btree_merge.c  test_btree_modify.c  test_btree_node.c  test_btree_node_pool.c  test_btree_search.c  test_buffer_pool.c  test_compression.c  test_concurrency.c  test_cursor_api.c  test_cursor_order.c  test_data_structures.c  test_db_header.c  test_deep_keys.c  test_delete.c  test_engine_settings.c  test_gc.c  test_helpers.h  test_hierarchical.c  test_inquisitor_fixes.c  test_key_encoding.c  test_large_values.c  test_last_cursor.c  test_locking.c  test_lz4_compression.c  test_multi_txn.c  test_mvcc.c  test_mvcc_visibility.c  test_overflow.c  test_overflow_pages.c  test_persistence.c  test_public_api.c  test_public_api_full.c  test_record_codec.c  test_slotted_page.c  test_storage_core.c  test_storage_ops.c  (+8 more)
tests/content/: acoa-trauma-forgiveness-and-self-love.md  baking-soda-non-toxic-household-hacks.md  benefits-of-wool-wellness-clothing.md  cooking-from-scratch-guide-ditching-processed-foods.md  keynesian-economics-daily-life-mental-health.md  philosophy-of-fountain-pens-analog-writing.md  sarah-connor-vs-trad-wife-2030.md  walking-10km-a-day-second-heart.md  zen-and-the-algorithmic-garden.md
tests/readme/: CMakeLists.txt  test_readme_basic.c  test_readme_config.c  test_readme_cursor.c  test_readme_for_each.c  test_readme_keysplit.c  test_readme_navigation.c
wrappers/c-sharp/: GarrySharp.sln  README.md
wrappers/c-sharp/GarrySharp/: BinaryCodec.cs  GarryConfig.cs  GarryDatabase.cs  GarryException.cs  GarryIgnoreAttribute.cs  GarryKeyAttribute.cs  GarryNative.cs  GarrySerializer.cs  GarrySharp.csproj  GarryTransaction.cs  KeyEncoder.cs
wrappers/c-sharp/GarrySharp.Tests/: BinaryCodecTests.cs  GarrySerializerTests.cs  GarrySharp.Tests.csproj  KeyEncoderTests.cs
wrappers/delphi/garry/: README.md  garry.pas  garry_codec.pas  garry_test.dpr  garry_test.lpr  garry_test_unit.pas  garry_types.pas  garry_types.ppu  run_fpc_test.sh
wrappers/go/garry-go/: README.md  codec.go  encoder.go  garry.go  garry_test.go  go.mod  serializer.go
wrappers/godot/garry/: CMakeLists.txt  README.md
wrappers/godot/garry/project/: project.godot  test_meowdb.gd.uid  test_simple.gd.uid
wrappers/godot/garry/project/.godot/: extension_list.cfg
wrappers/godot/garry/project/.godot/editor/: editor_layout.cfg  filesystem_cache10
wrappers/godot/garry/project/addons/garry/: garry.gdextension  garry.gdextension.uid
wrappers/godot/garry/project/test/: test_garry.gd  test_garry.gd.uid
wrappers/godot/garry/src/: garry_config.h  garry_db.c  garry_db.h  gdext.c  gdext.h
wrappers/js/garry/: .npmignore  README.md  binding.gyp  package-lock.json  package.json
wrappers/js/garry/lib/: codec.js  encoder.js  index.js  serializer.js
wrappers/js/garry/scripts/: copy-native.js
wrappers/js/garry/src/: garry.cc  garry.h
wrappers/js/garry/test/: codec.test.js  encoder.test.js  garry.test.js  serializer.test.js
wrappers/rust/GArY/: Cargo.toml  README.md  build.rs
wrappers/rust/GArY/src/: ffi.rs  lib.rs  serializer.rs
wrappers/rust/GArY/tests/: integration.rs
wrappers/unity/MeowDB/: README.md  package.json
wrappers/unity/MeowDB/Documentation~/: index.md
wrappers/unity/MeowDB/Editor/: MeowDB.Editor.asmdef
wrappers/unity/MeowDB/Plugins/: README.md
wrappers/unity/MeowDB/Runtime/: BinaryCodec.cs  GarryIgnoreAttribute.cs  GarryKeyAttribute.cs  KeyEncoder.cs  MeowConfig.cs  MeowDB.Runtime.asmdef  MeowDatabase.cs  MeowException.cs  MeowNative.cs  MeowSerializer.cs  MeowTransaction.cs
wrappers/unity/MeowDB/Samples~/BasicUsage/: MeowDBDemo.cs
wrappers/unity/MeowDB/Tests/Editor/: BinaryCodecTests.cs  KeyEncoderTests.cs  MeowDB.Tests.asmdef  MeowSerializerTests.cs
