function(garry_add_test name)
    add_executable(${name} ${name}.c)
    target_link_libraries(${name} PRIVATE garry)
    target_include_directories(${name} PRIVATE ${CMAKE_SOURCE_DIR}/src)
    target_compile_options(${name} PRIVATE -std=gnu89 -pedantic -Wall -Wextra)
    target_compile_definitions(${name} PRIVATE GARRY_TEST_CONTENT_DIR="${CMAKE_CURRENT_SOURCE_DIR}/content")
    add_test(NAME ${name} COMMAND ${name})
endfunction()

garry_add_test(test_types)
garry_add_test(test_storage_types)
garry_add_test(test_engine_settings)
garry_add_test(test_storage_core)
garry_add_test(test_locking)
garry_add_test(test_key_encoding)
garry_add_test(test_slotted_page)
garry_add_test(test_db_header)
garry_add_test(test_compression)
garry_add_test(test_record_codec)
garry_add_test(test_btree_node)
garry_add_test(test_btree_search)
garry_add_test(test_buffer_pool)
garry_add_test(test_btree_node_pool)
garry_add_test(test_btree_modify)
garry_add_test(test_btree_cursor)
garry_add_test(test_version_chain)
garry_add_test(test_hierarchical)
garry_add_test(test_wal)
garry_add_test(test_transaction)
garry_add_test(test_storage_ops)
garry_add_test(test_api)
garry_add_test(test_mvcc)
garry_add_test(test_delete)
garry_add_test(test_cursor_api)
garry_add_test(test_public_api)
garry_add_test(test_threading)
garry_add_test(test_lz4_compression)
garry_add_test(test_overflow)
garry_add_test(test_deep_keys)
garry_add_test(test_large_values)
garry_add_test(test_blog_storage)
garry_add_test(test_public_api_full)
garry_add_test(test_data_structures)
garry_add_test(test_inquisitor_fixes)

add_subdirectory(readme)
