function(garry_add_test name)
    add_executable(${name} ${name}.c)
    target_link_libraries(${name} PRIVATE garry)
    target_include_directories(${name} PRIVATE ${CMAKE_SOURCE_DIR}/src)
    target_compile_options(${name} PRIVATE -std=gnu89 -pedantic -Wall -Wextra)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

garry_add_test(test_readme_basic)
garry_add_test(test_readme_keysplit)
garry_add_test(test_readme_cursor)
garry_add_test(test_readme_for_each)
garry_add_test(test_readme_navigation)
garry_add_test(test_readme_config)
